sandbox-codebase/objects/mone__Mailchimp_Group_Category__c/mone__Mailchimp_Group_Category__c.object-meta.xml
<CustomObject>
    <description>Manage interest categories for a specific list. Interest categories organize interests, which are used to group subscribers based on their preferences. These correspond to &apos;group titles&apos; in the Mailchimp application</description>
    <label>Mailchimp Group Category</label>
    <nameField>
        <label>Group Category Id</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Mailchimp Group Categories</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>