sandbox-codebase/objects/mone__Mailchimp_Group_Category__c/fields/mone__Display_Order__c.field-meta.xml
<CustomField>
    <fullName>mone__Display_Order__c</fullName>
    <inlineHelpText>The order that the categories are displayed in the list. Lower numbers display first.</inlineHelpText>
    <label>Display Order</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>