sandbox-codebase/objects/mone__Mailchimp_Group_Category__c/fields/mone__Mailchimp_List__c.field-meta.xml
<CustomField>
    <fullName>mone__Mailchimp_List__c</fullName>
    <inlineHelpText>A Mailchimp list can have many group categories.</inlineHelpText>
    <label>Mailchimp List</label>
    <referenceTo>mone__Mailchimp_List__c</referenceTo>
    <relationshipLabel>Mailchimp Group Categories</relationshipLabel>
    <relationshipName>Mailchimp_Group_Categories</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>