sandbox-codebase/objects/mone__Mailchimp_Group_Category__c/fields/mone__Title__c.field-meta.xml
<CustomField>
    <fullName>mone__Title__c</fullName>
    <inlineHelpText>The text description of this category. This field appears on signup forms and is often phrased as a question.</inlineHelpText>
    <label>Title</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>