sandbox-codebase/objects/mone__Mailchimp_Group_Category__c/fields/mone__Type__c.field-meta.xml
<CustomField>
    <fullName>mone__Type__c</fullName>
    <inlineHelpText>Determines how this category’s interests appear on signup forms. Possible values: &quot;checkboxes&quot;, &quot;dropdown&quot;, &quot;radio&quot;, or &quot;hidden&quot;.</inlineHelpText>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>checkboxes</fullName>
            </value>
            <value>
                <fullName>dropdown</fullName>
            </value>
            <value>
                <fullName>radio</fullName>
            </value>
            <value>
                <fullName>hidden</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>